<resources>
    <string name="app_name">SIMple</string>
    <string name="app_name_settings">Configuración</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_cuenta">Cuentas</string>
    <string name="title_compra">Compras</string>
    <string name="title_llamada">Llamadas</string>
    <string name="title_nauta">Nauta</string>
    <string name="title_servicios">Servicios SMS</string>
    <string name="title_entumovil">EnTuMovil</string>
    <string name="title_telepuntos">Telepuntos</string>
    <string name="title_faq">Preguntas y Respuestas</string>
    <string name="title_terminos">Términos y Condiciones</string>
    <string name="title_politicas">Políticas de Privacidad</string>
    <string name="title_settings">Configuración</string>
    <string name="title_support">Soporte</string>
    <string name="title_about">Acerca de</string>
    <string name="title_share">Invitar Amigos</string>
    <string name="title_tab_planes">Planes</string>
    <string name="title_tab_paquete">Paquetes</string>
    <string name="title_tab_amigo">Amigo</string>
    <string name="open_drawer">Abrir menú lateral</string>
    <string name="close_drawer">Cerrar menú lateral</string>
    <string name="title_tarifa_por_consumo">Tarifa por Consumo</string>
    <string name="subtitle_tarifa_por_consumo">Cuando habilitas la tarifa por consumo, al navegar con datos móviles, se descuenta directamente del saldo principal. Es una opción más costosa por lo que te recomendamos comprar un Paquete o un Plan Combinado.</string>
    <string name="invite_user">Estoy usando SIMple para gestionar los servicios de ETECSA. ¡Únete! Descárgala aquí: https://www.apklis.cu/application/</string>
    <string name="shortcuts_disable">shortcuts disable</string>
    <string name="shorcuts_long_label">shorcuts long label</string>
    <string name="shorcuts_short_label">shorcuts short label</string>
    <string name="view_telepuntos">https://www.google.com/maps/search/ETECSA/</string>
    <string name="title_categoria_combinados">Combinados</string>
    <string name="title_categoria_lte">LTE</string>
    <string name="title_categoria_bolsas">Bolsas</string>
    <string name="title_plan_basico">1.4 GB</string>
    <string name="subtitle_plan_basico">Plan Básico</string>
    <string name="title_plan_medio">3.5 GB</string>
    <string name="subtitle_plan_medio">Plan Medio</string>
    <string name="title_plan_extra">8 GB</string>
    <string name="subtitle_plan_extra">Plan Extra</string>
    <string name="title_lte_a">1 GB</string>
    <string name="subtitle_lte_a">Solo LTE</string>
    <string name="title_lte_b">2.5 GB</string>
    <string name="subtitle_lte_b">Solo LTE</string>
    <string name="title_lte_c">16 GB</string>
    <string name="subtitle_lte_c">Solo LTE</string>
    <string name="title_diaria">200 MB</string>
    <string name="subtitle_diaria">Solo LTE por 24h</string>
    <string name="title_mensajeria">600 MB</string>
    <string name="subtitle_mensajeria">Correo nauta y toDus</string>
    <string name="home_categoria_transferir">Transferir</string>
    <string name="home_categoria_recarga">Recarga</string>
    <string name="home_categoria_adelanta">Adelanta</string>
    <string name="buttom_adelanta">Solicitar adelanto</string>
    <string name="hint_cantidad_adelanta">Cantidad</string>
    <string name="hint_numero_transferir">Número</string>
    <string name="hint_cantidad_transferir">Monto</string>
    <string name="hint_password_transferir">Clave</string>
    <string name="buttom_transferir">Transferir</string>
    <string name="hint_codigo_recarga">Cupón de Recarga</string>
    <string name="buttom_recarga">Recargar</string>
    <string name="consulta_saldo">Saldo</string>
    <string name="consulta_pospago">Pospago</string>
    <string name="consulta_bonos">Bonos</string>
    <string name="consulta_datos">Datos</string>
    <string name="paquete_categoria_minutos">Minutos</string>
    <string name="paquete_categoria_mensajes">Mensajes</string>
    <string name="title_estado_minutos">Minutos</string>
    <string name="title_estado_mensajes">Mensajes</string>
    <string name="subtitle_estado_minutos">Consultar estado</string>
    <string name="subtitle_estado_mensajes">Consultar estado</string>
    <string name="title_voz_a">5 Min</string>
    <string name="title_voz_b">10 Min</string>
    <string name="title_voz_c">15 Min</string>
    <string name="title_voz_d">25 Min</string>
    <string name="title_voz_e">40 Min</string>
    <string name="title_sms_a">20 SMS</string>
    <string name="title_sms_b">50 SMS</string>
    <string name="title_sms_c">90 SMS</string>
    <string name="title_sms_d">120 SMS</string>
    <string name="title_estado_amigo">Estado</string>
    <string name="subtitle_estado_amigo">Estado de su plan</string>
    <string name="title_lista_amigo">Servicio</string>
    <string name="subtitle_lista_amigo">Consultar servicio</string>
    <string name="title_activar_amigo">Activar</string>
    <string name="subtitle_activar_amigo">Activar servicio</string>
    <string name="title_desactivar_amigo">Desactivar</string>
    <string name="subtitle_desactivar_amigo">Desactivar servicio</string>
    <string name="title_agregar_amigo">Añadir</string>
    <string name="subtitle_agregar_amigo">Añadir número</string>
    <string name="title_eliminar_amigo">Eliminar</string>
    <string name="subtitle_eliminar_amigo">Eliminar número</string>
    <string name="title_categoria_llamadas">Emergencia</string>
    <string name="title_llamadas_asterisco">Asterisco 99</string>
    <string name="subtitle_llamadas_asterisco">Llamar contacto</string>
    <string name="title_llamadas_privado">Privado</string>
    <string name="subtitle_llamadas_privado">Llamar contacto</string>
    <string name="title_llamadas_atencion_cliente">Atención al cliente</string>
    <string name="title_llamadas_nauta_hogar">Nauta Hogar</string>
    <string name="title_llamadas_reporte_tfa">Reparaciones TFA</string>
    <string name="title_llamadas_quejas">Quejas y reclamos</string>
    <string name="title_llamadas_antidroga">Antidrogas</string>
    <string name="title_llamadas_ambulancia">Ambulancia</string>
    <string name="title_llamadas_bomberos">Bomberos</string>
    <string name="title_llamadas_policia">Policía</string>
    <string name="title_llamadas_maritima">Emergencia marítima</string>
    <string name="title_servicio_tipo_red">Tipo de red</string>
    <string name="title_servicio_activa_4g">Activar 4G</string>
    <string name="title_servicio_sim">Mi SIM</string>
    <string name="title_servicio_mms">Activar MMS</string>
    <string name="title_servicio_turismo">Turismo</string>
    <string name="title_servicio_oferta">Oferta</string>
    <string name="title_servicio_tarifa">Tarifas</string>
    <string name="title_servicio_cancelar_infomovil">Baja Infomovil</string>
    <string name="title_entumovil_clima">Clima</string>
    <string name="title_entumovil_cambio">Cambio</string>
    <string name="title_entumovil_pelota">Pelota</string>
    <string name="title_entumovil_mlb">MLB</string>
    <string name="title_entumovil_futbol">Fútbol</string>
    <string name="title_entumovil_dhl">DHL</string>
    <string name="title_entumovil_elect">Electricidad</string>
    <string name="title_entumovil_embajada">Embajada</string>
    <string name="title_entumovil_horoscopo">Horóscopo</string>
    <string name="title_entumovil_tiempo">Tiempo</string>
    <string name="title_entumovil_frases_martianas">Frases Martianas</string>
    <string name="title_entumovil_prensa_latina">Prensa Latina</string>
    <string name="title_entumovil_cubadebate">Cubadebate</string>
    <string name="title_entumovil_granma">Granma</string>
    <string name="title_entumovil_vuelos">Vuelos</string>
    <string name="title_entumovil_apagon">Apagón</string>
    <string name="title_description_nauta">Inicia sesión en tu cuenta</string>
    <string name="hint_nauta_user">Usuario</string>
    <string name="hint_nauta_password">Contraseña</string>
    <string name="buttom_nauta_login">Iniciar sesión</string>
    <string name="user_passw_error">Usuario o contraseña incorrectos</string>
    <string name="buttom_bonos">Promoción</string>
    <string name="swippe_text">Desliza para actualizar</string>
    <string name="title_categoria_internet">Paquetes</string>
    <string name="preference_categoria_general">General</string>
    <string name="title_preference_home">Inicio</string>
    <string name="summary_preference_home">Elija cuáles opciones desea mostrar en la pantalla de inicio</string>
    <string name="title_preference_sim">SIM</string>
    <string name="summary_preference_sim">Seleccione la línea por la que desea efectuar las acciones en la aplicación (no compatible con el apartado de Cuentas)</string>
    <string name="title_preference_ui">Tema</string>
    <string name="summary_preference_ui">%s</string>
    <string name="ui_theme_key">ui_key</string>
    <string name="sim_key">sim_key</string>
    <string name="title_preference_biometric">Seguridad</string>
    <string name="summary_preference_biometric">Use su huella o código de desbloqeo para proteger sus datos en la aplicación</string>
    <string name="biometric_key">biometric</string>
    <string name="title_dialog_huella">Verifica tu Identidad</string>
    <string name="subtitle_dialog_huella">Para acceder a "Mi Perfil" verifique que eres el dueño del móvil.</string>
    <string name="title_preference_floating">Tráfico de datos</string>
    <string name="summary_preference_floating">Mostrar burbuja flotante con el tráfico de datos actual</string>
    <string name="floating_key">window</string>
    <string name="home_key">home</string>
    <string name="title_preference_autocomplete">Autocompletado</string>
    <string name="summary_preference_autocomplete">Rellenar algunos servicios con la información brindada en Mi Perfil</string>
    <string name="autocomplete_key">autocompletado</string>
    <string name="error_input_transfer_numero_digitos">El número debe tener 8 dígitos</string>
    <string name="error_input_transfer_clave_digitos">Faltan dígitos</string>
    <string name="error_input_transfer_numero_vacio">Inserte un número</string>
    <string name="error_transferir_centavos">Para transferir centavos déje la cantidad en blanco</string>
    <string name="title_good_morning">¡Buenos días!</string>
    <string name="title_good_afternoon">¡Buenas tardes!</string>
    <string name="title_good_night">¡Buenas noches!</string>
    <string name="plan_basico">Con la compra de este plan obtendrá:\n\n– 600 MB para todas las redes.\n– 800 MB solo para la red 4G/LTE.\n– 300 MB para navegación nacional.\n– 15 minutos y 20 mensajes para la red nacional.\n\nLa validez es de 30 días a partir de su primera utilización.</string>
    <string name="plan_basico_precio">110 CUP</string>
    <string name="plan_medio">Con la compra de este plan obtendrá: \n\n– 1.5 GB para todas las redes.\n– 2 GB solo para la red 4G/LTE.\n– 300 MB para navegación nacional.\n– 35 minutos y 40 mensajes para la red nacional.\n\nLa validez es de 30 días a partir de su primera utilización.</string>
    <string name="plan_medio_precio">250 CUP</string>
    <string name="plan_extra">Con la compra de este plan obtendrá: \n\n– 3.5 GB para todas las redes.\n– 4.5 GB solo para la red 4G/LTE.\n– 300 MB para navegación nacional.\n– 75 minutos y 80 mensajes para la red nacional.\n\nLa validez es de 30 días a partir de su primera utilización.</string>
    <string name="plan_extra_precio">500 CUP</string>
    <string name="paquete_a">Con la compra de este plan obtendrá: \n\n– 1 GB solo para la red 4G/LTE.\n– 300 MB para navegación nacional. \n\nLa validez es de 30 días a partir de su primera utilización.</string>
    <string name="paquete_a_precio">100 CUP</string>
</resources>